✨ feat: login template

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     </div>
                 </div>
                 <div class="item">
-                    <button class="ui primary basic button small">Login</button>
+                    <a href="./login.html">
+                        <button class="ui primary basic button small">Login</button>
+                    </a>
                 </div>
             </div>
         </div>
